--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -13,7 +13,7 @@
 
 {% block header %}
 
-<div class="flex-ns flex-wrap-ns justify-between-m banner-bg bg-banner-sz coverm cover-s banner-height minh-100vh">
+<div class="flex-ns flex-wrap-ns justify-between-m banner-bg bg-banner-sz coverm cover-s section-height minh-100vh">
   <div class="ba1 mb3 relative dt-ns mt0-ns pr3-ns pl3-ns pt3 ma-auto pt6-l pt4 mw9 ml-auto mr-auto w-100">
     <!-- Banner Image-->
     <div class="fr-l w-45-l w100-m w90-s tc ml-auto mr-auto"
@@ -53,7 +53,7 @@
 
 {% block content %}
 
-<div class="slideshow-container bg-quotes bg-banner-sz coverm cover-s banner-height justify-center items-center flex flex-wrap minh-100vh">
+<div class="slideshow-container bg-quotes bg-banner-sz coverm cover-s section-height justify-center items-center flex flex-wrap minh-100vh">
   <div class="slideshow-inner w-100 ph4">
     <div class="mySlides fadein">
       <div>
@@ -81,7 +81,7 @@
 </div>
 <div class="mw8 mr-auto ml-auto ph4">
   <div class="w-100">
-    <div class="banner-height center justify-center items-center flex flex-wrap">
+    <div class="section-height center justify-center items-center flex flex-wrap">
       <div>
         <div class="w-50-l fr-l tc">
           <img
@@ -110,7 +110,7 @@
         </div>
       </div>
     </div>
-    <div class="banner-height center justify-center items-center flex flex-wrap">
+    <div class="section-height center justify-center items-center flex flex-wrap">
       <div>
         <div class="w-50-l fl-l tc">
           <img
@@ -139,7 +139,7 @@
         </div>
       </div>
     </div>
-    <div class="banner-height center justify-center items-center flex flex-wrap">
+    <div class="section-height center justify-center items-center flex flex-wrap">
       <div>
         <div class="w-50-l fr-l tc">
           <img
@@ -168,7 +168,7 @@
         </div>
       </div>
     </div>
-    <div class="banner-height center justify-center items-center flex flex-wrap">
+    <div class="section-height center justify-center items-center flex flex-wrap">
       <div>
         <div class="w-50-l fl-l tc">
           <img
@@ -202,7 +202,7 @@
         </div>
       </div>
     </div>
-    <div class="banner-height center justify-center items-center flex flex-wrap">
+    <div class="section-height center justify-center items-center flex flex-wrap">
       <div>
         <div class="w-50-l fr-l tc">
           <img
@@ -236,7 +236,7 @@
     </div>
   </div>
 </div>
-<div class="bg-solutions bg-banner-sz coverm cover-s banner-height justify-center items-center flex flex-wrap minh-100vh">
+<div class="bg-solutions bg-banner-sz coverm cover-s section-height justify-center items-center flex flex-wrap minh-100vh">
   <div class="mw9 pl3 center pv0-l pv4">
     <div class="dib-l width-sols v-top">
       <h2 class="white roboto f2 fw7 title-sols display-sols mv3">
@@ -335,7 +335,7 @@
   </div>
 </div>
 <!-- Ebook section -->
-<div class="bg-ebook bg-banner-sz cover bg-center banner-height justify-center items-center flex flex-wrap minh-100vh">
+<div class="bg-ebook bg-banner-sz cover bg-center section-height justify-center items-center flex flex-wrap minh-100vh">
   <div>
     <h2 class="white center roboto w-100 tc f1-ns f2 lh3 pl3-l ph3 mw7">
       Are you going fast in the wrong direction?<br>
@@ -351,7 +351,7 @@
   </div>
 </div>
 <!-- About us section -->
-<div class="banner-height justify-center items-center flex flex-wrap minh-100vh">
+<div class="section-height justify-center items-center flex flex-wrap minh-100vh">
   <div class="overflow-hidden">
     <div class="tc mw7 center">
       <h2 class="c-fluid-bk roboto tc f1-ns lh3 mv4">
@@ -372,7 +372,7 @@
     {% include "clients-carousel.html" %}
   </div>
 </div>
-<div class="asap-bg bg-banner-sz cover bg-center banner-height justify-center items-center flex flex-wrap minh-100vh">
+<div class="asap-bg bg-banner-sz cover bg-center section-height justify-center items-center flex flex-wrap minh-100vh">
   <p class="white f2-ns f3 tc roboto b mv0">
     We find all vulnerabilities and report them ASAP
   </p>
