--- a/theme/2020/templates/solution.html
+++ b/theme/2020/templates/solution.html
@@ -39,6 +39,13 @@
           <span class="c-fluid-gray v-mid b"> / </span>
         </li>
         <li class="dib mt0">
+          <a class="c-fluid-gray hover-white no-underline"
+             href="{{ SITEURL }}/solutions/devsecops/">
+            Solutions
+          </a>
+          <span class="c-fluid-gray v-mid b"> / </span>
+        </li>
+        <li class="dib mt0">
           <a class="white hover-white no-underline"
              href=".">
             {{ page.title }}
@@ -87,7 +94,7 @@
   <!-- Section 2: Benefits -->
   <div class="w-100 pv4">
     <h2 class="c-fluid-bk fw7 f1 tc">Benefits</h2>
-    <div class="solution-benefits">
+    <div class="solution-benefits justify-center items-center flex flex-wrap">
       {{ page.content }}
     </div>
     <div class="tc pv3">
@@ -101,21 +108,21 @@
   <!-- Section 3: Cards -->
   <div class="w-100 pv4">
     <h2 class="c-fluid-bk fw7 f1 tc">Fluid Attacks in Numbers</h2>
-    <div class="w-100 justify-center items-center flex">
-      <div class="counter-container bg-white shadowbox-blog br3 dib ph4 mh4">
+    <div class="w-100 justify-center items-center flex flex-wrap">
+      <div class="counter-container bg-white shadowbox-blog br3 dib-l ph4 mh4-l center mv0-l mv4">
         <p class="tc c-lightred f-card mb4 fw7">77%</p>
         <p class="tc c-fluid-bk f5">
           of continuous hacking projects with
           at least one high or critical vulnerability
         </p>
       </div>
-      <div class="counter-container bg-white shadowbox-blog br3 dib ph4 mh4">
+      <div class="counter-container bg-white shadowbox-blog br3 dib-l ph4 mh4-l center mv0-l mv4">
         <p class="tc c-lightred f-card mb4 fw7">100k</p>
         <p class="tc c-fluid-bk f5">
           vulnerabilities discovered annually
         </p>
       </div>
-      <div class="counter-container bg-white shadowbox-blog br3 dib ph4 mh4">
+      <div class="counter-container bg-white shadowbox-blog br3 dib-l ph4 mh4-l center mv0-l mv4">
         <p class="tc c-lightred f-card mb4 fw7">11</p>
         <p class="tc c-fluid-bk f5">
           average hackers attacking your project
