feat(cross): #3647 add page contents
- Added solution pages articles with its contents
- Changed the image alts on each solution


Former-commit-id: 168fdecc8179c12b2b5d58c9edbaa5d6e6cabc71

--- a/theme/2020/templates/solution.html
+++ b/theme/2020/templates/solution.html
@@ -78,7 +78,7 @@
           <img
           class="br3"
           src="{{ SITEURL }}/solutions/{{ page.solutiontitle }}/{{ page.image }}"
-          alt="Young hacker smiling">
+          alt="{{ page.title }}">
         </div>
         <div class="w-60-l fr-l tl pl4-l">
           <h2 class="c-fluid-bk fw7 f1 mv0 tl lh-18">
