feat(front): #3663 link solutions
- Linked every solution page to its section


Former-commit-id: fa5cb04bad2357abfee059eb50deaa1a6775d5e6

--- a/theme/2020/static/scss/base.scss
+++ b/theme/2020/static/scss/base.scss
@@ -1030,3 +1030,15 @@ video {
   height: 290px;
   width: 290px;
 }
+
+.solution-link::after {
+  content: "";
+  display: block;
+  width: 30%;
+  border-bottom: 4px solid $button-hover;
+  transition: width .5s;
+}
+
+.solution-link:hover::after {
+  width: 60%;
+}
