--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -244,91 +244,55 @@
       </h2>
     </div>
     <div class="dib-l ph0-l w-auto-l w5 center">
-      <ul class="list roboto white f3-ns f4 fw7 dib-l ph4 mv0">
-        <li>
-          <p class="mv0">
-            DevSecOps<br>
-            <img
-            class="w3 pb3 mb1"
-            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/underline.png"
-            alt="Young hacker smiling">
-          </p>
+      <ul class="list roboto f3-ns f4 fw7 dib-l ph4 mv0">
+        <li class="mb3">
+          <a href="{{ SITEURL }}/solutions/devsecops/" class="white solution-link no-underline mt0 mb3 t-all-5">
+            DevSecOps
+          </a>
         </li>
-        <li>
-          <p class="mv0 nowrap">
-            Security Testing<br>
-            <img
-            class="w3 pb3 mb1"
-            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/underline.png"
-            alt="Young hacker smiling">
-          </p>
+        <li class="mb3">
+          <a href="{{ SITEURL }}/solutions/security-testing/" class="white solution-link no-underline mt0 mb3 nowrap">
+            Security Testing
+          </a>
         </li>
-        <li>
-          <p class="mv0">
-            Pentesting<br>
-            <img
-            class="w3 pb3 mb1"
-            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/underline.png"
-            alt="Young hacker smiling">
-          </p>
+        <li class="mb3">
+          <a href="{{ SITEURL }}/solutions/pentesting/" class="white solution-link no-underline mt0 mb3">
+            Pentesting
+          </a>
         </li>
       </ul>
       <ul class="list roboto white f3-ns f4 fw7 dib-l ph4 mv0">
-        <li>
-          <p class="mv0 nowrap">
-            Ethical Hacking<br>
-            <img
-            class="w3 pb3 mb1"
-            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/underline.png"
-            alt="Young hacker smiling">
-          </p>
+        <li class="mb3">
+          <a href="{{ SITEURL }}/solutions/ethical-hacking/" class="white solution-link no-underline mt0 mb3 nowrap">
+            Ethical Hacking
+          </a>
         </li>
-        <li>
-          <p class="mv0 nowrap">
-            Red Teaming<br>
-            <img
-            class="w3 pb3 mb1"
-            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/underline.png"
-            alt="Young hacker smiling">
-          </p>
+        <li class="mb3">
+          <a href="{{ SITEURL }}/solutions/red-teaming/" class="white solution-link no-underline mt0 mb3 nowrap">
+            Red Teaming
+          </a>
         </li>
-        <li>
-          <p class="mv0 nowrap">
-            Attack Simulation<br>
-            <img
-            class="w3 pb3 mb1"
-            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/underline.png"
-            alt="Young hacker smiling">
-          </p>
+        <li class="mb3">
+          <a href="{{ SITEURL }}/solutions/attack-simulation/" class="white solution-link no-underline mt0 mb3 nowrap">
+            Attack Simulation
+          </a>
         </li>
       </ul>
       <ul class="list roboto white f3-ns f4 fw7 dib-l ph4 mv0">
-        <li>
-          <p class="mv0 nowrap">
-            Vulnerability Assesment<br>
-            <img
-            class="w3 pb3 mb1"
-            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/underline.png"
-            alt="Young hacker smiling">
-          </p>
+        <li class="mb3">
+          <a href="{{ SITEURL }}/solutions/vulnerability-assesment/" class="white solution-link no-underline mt0 mb3 nowrap">
+            Vulnerability Assesment
+          </a>
         </li>
-        <li>
-          <p class="mv0">
-            Compliance<br>
-            <img
-            class="w3 pb3 mb1"
-            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/underline.png"
-            alt="Young hacker smiling">
-          </p>
+        <li class="mb3">
+          <a href="{{ SITEURL }}/solutions/compliance/" class="white solution-link no-underline mt0 mb3">
+            Compliance
+          </a>
         </li>
-        <li>
-          <p class="mv0 nowrap">
-            IT Auditing<br>
-            <img
-            class="w3 pb3 mb1"
-            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/underline.png"
-            alt="Young hacker smiling">
-          </p>
+        <li class="mb3">
+          <a href="{{ SITEURL }}/solutions/it-auditing/" class="white solution-link no-underline mt0 mb3 nowrap">
+            IT Auditing
+          </a>
         </li>
       </ul>
     </div>
