feat(front): #3665 hide navbar on scroll down
- Create script to hide the navbar if a user is scrolling down,
and show it if the sroll up


Former-commit-id: 66947f349fb24a7f95b6f503f29c1e59085232cc

--- a/theme/2020/static/scss/base.scss
+++ b/theme/2020/static/scss/base.scss
@@ -269,7 +269,7 @@ $codeyellow: rgba(230, 219, 116, 1);
   .asap-bg { background-image: url('../../images/team-m.png'); }
 }
 
-@media screen and (min-width: 350px) and (max-width: 480px) {
+@media screen and (max-width: 480px) {
   .bg-ebook { background-image: url('../../images/bg-ebook-s.png'); }
   .asap-bg { background-image: url('../../images/team-s.png'); }
 }
