fix(front): #3667 fix height of team picture
- Fluid Attacks' team image is stretching in height


Former-commit-id: 0f5427333a3d0584bf8f72310b7ac9309a812768

--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -319,7 +319,7 @@
     {% include "clients-carousel.html" %}
   </div>
 </div>
-<div class="asap-bg bg-banner-sz cover bg-center section-height justify-center items-center flex flex-wrap minh-100vh">
+<div class="asap-bg bg-banner-sz cover bg-center section-height justify-center items-center flex flex-wrap">
   <p class="white f2-ns f3 tc roboto b mv0">
     We find all vulnerabilities and report them ASAP
   </p>
