refac(front): #3660.1 new navbar design
- Change the view of the buttons in the navbar


Former-commit-id: 3bb3905605da2d31f22d8fe34fc6868233235404

--- a/theme/2020/templates/menu.html
+++ b/theme/2020/templates/menu.html
@@ -1,13 +1,7 @@
 <div id="navbar" class="cssmenu bg-white lh-solid h-navbar cover shadow-menu fixed w-100 top-0 z-max t-all-5">
   <div class="b relative w-100 z-5 mw9 mr-auto ml-auto h-navbar">
     <ul class="list ma0 pa0 overflow-hidden h-navbar">
-      <li class="fl">
-        <a class="db tc pa1 no-underline" href="{{ SITEURL }}/">
-          <img loading="lazy" class="h-logo ml3 mv2 pv2-ns pv3 absolute"
-            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg" alt="Young hacker smiling">
-        </a>
-      </li>
-      <li class="relative fr mv4-l mv3 mr3-xl right-small pv2-l pv-4-m">
+      <li class="relative fl mv4-l mv3 ml3 pv2-l pv-4-m">
         <input type="checkbox" id="op" class="dn" />
         <div class="lower">
           <label for="op" class="pointer dib h2-l">
@@ -16,8 +10,8 @@
             </label>
         </div>
         <div class="overlay overlay-hugeinc bg-white fixed w-100 h-100 top-0 left-0 z-100 overflow-y-auto">
-          <div class="mw9 tr ml-auto mr-auto ph3">
-            <label for="op" class="mr3-xl right-small">
+          <div class="mw9 tl ml-auto mr-auto ph3">
+            <label for="op" class="pl2">
               <img
                 loading="lazy"
                 class="lower-img w2-l w-menu-bt mv4-l pv2-l mv3 pv-4-m right-0 pointer z-100 relative"
@@ -206,8 +200,29 @@
           </nav>
         </div>
       </li>
+      <li class="fl">
+        <a class="db tc pa1 no-underline" href="{{ SITEURL }}/">
+          <img loading="lazy" class="h-logo ml3 mv2 pv2-ns pv3"
+            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg" alt="Young hacker smiling">
+        </a>
+      </li>
+      <li class="relative fr mt-menu mr3 mv4-l pv1-l pv-4-m db-l dn">
+        <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
+            href="{{ SITEURL }}/contact-us/">
+          <button class="outline-transparent fw7 br2 bw1 ph2 pv2 bg-white bc-fluid-red ba hv-fluid-rd hv-fluid-bd bt-trans c-dkred pointer">Contact</button>
+        </a>
+      </li>
+      <li class="relative fr mt-menu mr3 pr2 mv4-l mv3 pv1-l pv-4-m">
+        <a class="tc no-underline f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
+            href="https://fluidattacks.com/integrates">
+          <button class="outline-transparent c-dkred fw7 bn ph0 pv2 hv-fluid-rd bg-transparent pointer">Login</button>
+        </a>
+      </li>
+      <li class="relative fr mt-menu mr4 mv3-l pv1-l pv2">
+        <div class="h3 w1 b--moon-gray br"></div>
+      </li>
       <!-- Searching features -->
-      <li class="relative fr mt-menu mr4 mv4-l pv2-l pv-4-m">
+      <li class="relative fr mt-menu mr3 mv4-l pv2-l pv-4-m">
         <label for="tipue_search_input"
           class="search-box-label">
           <span>
@@ -217,34 +232,35 @@
           </span>
         </label>
       </li>
-      <li class="relative fr mt-menu mr3 mv4-l pv2-l pv-4-m db-l dn">
-        <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
-            href="{{ SITEURL }}/contact-us/">
-          <button class="outline-transparent fw7 br2 ph2 pv1 bg-white bc-fluid-red ba hv-fluid-rd hv-fluid-bd bt-trans c-dkred pointer">CONTACT</button>
-        </a>
-      </li>
-      <li class="relative fr mt-menu mr3 pr2 mv4-l mv3 pv2-l pv-4-m">
-        <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
-            href="https://fluidattacks.com/integrates">
-          <button class="outline-transparent fw7 bn ph0 pv1 hv-fluid-rd bg-transparent pointer">LOGIN</button>
-        </a>
-      </li>
-      <li class="db-xl display-none relative fr mt-menu mr3 pr2 mv4-l mv3 pv2-l pv-4-m">
+      <li class="db-xl display-none relative fr mt-menu mr3 pr2 mv4-l mv3 pv1-l pv-4-m">
         <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/blog/">
-          <button class="outline-transparent fw7 bn ph0 pv1 hv-fluid-rd bg-transparent pointer">BLOG</button>
+          <button class="outline-transparent fw4 bn ph0 pv2 hv-fluid-rd bg-transparent pointer">BLOG</button>
         </a>
       </li>
       <li class="db-xl display-none relative fr mt-menu mr3 pr2 mv4-l mv3 pv2-l pv-4-m">
         <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/resources/">
-          <button class="outline-transparent fw7 bn ph0 pv1 hv-fluid-rd bg-transparent pointer">RESOURCES</button>
+          <button class="outline-transparent fw4 bn ph0 pv1 hv-fluid-rd bg-transparent pointer">RESOURCES</button>
         </a>
       </li>
-      <li class="db-l dn fr mt-menu mr3 pr2 mv4-l mv3 pv2-l pv-4-m products-index">
+      <li class="db-l dn fr mt-menu mr3 pr2 mv4-l mv3 pv1-l pv-4-m usecases-index">
+        <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
+            href="{{ SITEURL }}/services/continuous-hacking/">
+          <button class="outline-transparent fw4 bn ph0 pv2 hv-fluid-rd bg-transparent pointer">
+            SERVICES<div class="dib w1"><i class="fas fa-angle-down"></i></div>
+          </button>
+        </a>
+        <div class="usecases-content roboto br3 br--bottom pt4 fadein">
+          <a class="f-key-features fw4" href="{{ SITEURL }}/services/continuous-hacking/">Continuous Hacking</a>
+          <a class="f-key-features fw4" href="{{ SITEURL }}/services/one-shot-hacking/">One-shot Hacking</a>
+          <a class="f-key-features fw4" href="{{ SITEURL }}/services/comparative/">Comparative</a>
+        </div>
+      </li>
+      <li class="db-l dn fr mt-menu mr3 pr2 mv4-l mv3 pv1-l pv-4-m products-index">
         <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/products/">
-          <button class="outline-transparent fw7 bn ph0 pv1 hv-fluid-rd bg-transparent pointer">
+          <button class="outline-transparent fw4 bn ph0 pv2 hv-fluid-rd bg-transparent pointer">
             PRODUCTS<div class="dib w1"><i class="fas fa-angle-down"></i></div>
           </button>
         </a>
@@ -253,19 +269,6 @@
           <a class="f-key-features fw4" href="{{ SITEURL }}/products/drills/">Drills</a>
           <a class="f-key-features fw4" href="{{ SITEURL }}/products/forces/">Forces</a>
           <a class="f-key-features fw4" href="{{ SITEURL }}/products/rules/">Rules</a>
-        </div>
-      </li>
-      <li class="db-l dn fr mt-menu mr3 pr2 mv4-l mv3 pv2-l pv-4-m usecases-index">
-        <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
-            href="{{ SITEURL }}/services/continuous-hacking/">
-          <button class="outline-transparent fw7 bn ph0 pv1 hv-fluid-rd bg-transparent pointer">
-            SERVICES<div class="dib w1"><i class="fas fa-angle-down"></i></div>
-          </button>
-        </a>
-        <div class="usecases-content roboto br3 br--bottom pt4 fadein">
-          <a class="f-key-features fw4" href="{{ SITEURL }}/services/continuous-hacking/">Continuous Hacking</a>
-          <a class="f-key-features fw4" href="{{ SITEURL }}/services/one-shot-hacking/">One-shot Hacking</a>
-          <a class="f-key-features fw4" href="{{ SITEURL }}/services/comparative/">Comparative</a>
         </div>
       </li>
     </ul>
