refac(front): #3660.2 new navbar design
- Center buttons in the navbar vertically
- changed size of the logo to the suggested in the design


Former-commit-id: 105fc7cbdd2d25502e4113be48db1240c08030e1

--- a/theme/2020/static/scss/base.scss
+++ b/theme/2020/static/scss/base.scss
@@ -216,8 +216,8 @@ $codeyellow: rgba(230, 219, 116, 1);
 .mw-1200 { max-width: 1200px; }
 .h30-em { height: 30em; }
 .shadow-menu { box-shadow: 0 5px 5px 0 rgb(176,176,176,0.2); }
-.h-logo { height: 70px; }
-.h-navbar { height: 6.875rem; }
+.h-logo { height: 80px; }
+.h-navbar { height: 104px; }
 .t-all-5 { transition: all .5s; }
 .mt-body { margin-top: 110px; }
 .nt-landing { margin-top: -110px;}
@@ -298,7 +298,6 @@ $codeyellow: rgba(230, 219, 116, 1);
   .h-search-icon { height: 1.125rem; }
   .w-menu-bt { width: 18px; }
   .dn-s { display: none; }
-  .h-logo { height: 50px; }
   .section-height { height: 800px; }
 }
 //medium resolutions
