--- a/theme/2020/templates/base.html
+++ b/theme/2020/templates/base.html
@@ -203,7 +203,7 @@
       <div class="skeleton bg-graylight">
         {% include "menu.html" %}
       </div>
-      <div class="mt-body">
+      <div>
         {% block breadcrumb %}{% endblock breadcrumb%}
         {% block header %}
         {% endblock header %}
