--- a/theme/2020/templates/menu.html
+++ b/theme/2020/templates/menu.html
@@ -1,11 +1,11 @@
-<div id="navbar" class="cssmenu bg-white lh-solid h-navbar cover shadow-menu fixed w-100 top-0 z-max t-all-5">
+<div id="navbar" class="cssmenu bg-white lh-solid h-navbar cover ba b--light-gray fixed w-100 top-0 z-max t-all-5">
   <div class="b relative w-100 z-5 mw9 mr-auto ml-auto h-navbar">
     <ul class="list ma0 pa0 overflow-hidden h-navbar">
-      <li class="relative fl mv4-l mv3 ml3 pv2-l pv-4-m">
+      <li class="relative fl ml3 pv4 mv1">
         <input type="checkbox" id="op" class="dn" />
         <div class="lower">
           <label for="op" class="pointer dib h2-l">
-            <img loading="lazy" class="nt-menu-btn pv0-l pv1 w-menu-bt lower-img w2-l relative ph2" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/menu.svg"
+            <img loading="lazy" class="w2" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/menu.svg"
               alt="Young hacker smiling">
             </label>
         </div>
@@ -202,53 +202,53 @@
       </li>
       <li class="fl">
         <a class="db tc pa1 no-underline" href="{{ SITEURL }}/">
-          <img loading="lazy" class="h-logo ml3 mv2 pv2-ns pv3"
+          <img loading="lazy" class="h-logo ml3 pv2"
             src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg" alt="Young hacker smiling">
         </a>
       </li>
-      <li class="relative fr mt-menu mr3 mv4-l pv1-l pv-4-m db-l dn">
+      <li class="relative fr mr3 pv4 mv1 db-l dn">
         <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/contact-us/">
           <button class="outline-transparent fw7 br2 bw1 ph2 pv2 bg-white bc-fluid-red ba hv-fluid-rd hv-fluid-bd bt-trans c-dkred pointer">Contact</button>
         </a>
       </li>
-      <li class="relative fr mt-menu mr3 pr2 mv4-l mv3 pv1-l pv-4-m">
+      <li class="relative fr mr3 pr2 pv4 mv1">
         <a class="tc no-underline f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="https://fluidattacks.com/integrates">
-          <button class="outline-transparent c-dkred fw7 bn ph0 pv2 hv-fluid-rd bg-transparent pointer">Login</button>
+          <button class="outline-transparent c-dkred fw7 ba b--white bw1 ph0 pv2 hv-fluid-rd bg-transparent pointer">Login</button>
         </a>
       </li>
-      <li class="relative fr mt-menu mr4 mv3-l pv1-l pv2">
+      <li class="relative fr mr4 pv3 mv1">
         <div class="h3 w1 b--moon-gray br"></div>
       </li>
       <!-- Searching features -->
-      <li class="relative fr mt-menu mr3 mv4-l pv2-l pv-4-m">
+      <li class="relative fr mr3 pv4 mv1">
         <label for="tipue_search_input"
           class="search-box-label">
           <span>
-            <img class="search-icon relative w-search-icon z-2 pointer ph2-l h-search-icon pv1-l"
+            <img class="search-icon relative w-search-icon z-2 pointer ph2-l h-search-icon pv2 mv1"
                 src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/search.svg"
                 alt="Magnifying glass">
           </span>
         </label>
       </li>
-      <li class="db-xl display-none relative fr mt-menu mr3 pr2 mv4-l mv3 pv1-l pv-4-m">
+      <li class="db-xl display-none relative fr mr3 pv4 mv1">
         <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/blog/">
-          <button class="outline-transparent fw4 bn ph0 pv2 hv-fluid-rd bg-transparent pointer">BLOG</button>
+          <button class="outline-transparent fw4 ba b--white bw1 ph0 pv2 hv-fluid-rd bg-transparent pointer">Blog</button>
         </a>
       </li>
-      <li class="db-xl display-none relative fr mt-menu mr3 pr2 mv4-l mv3 pv2-l pv-4-m">
+      <li class="db-xl display-none relative fr mr3 pr2 pv4 mv1">
         <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/resources/">
-          <button class="outline-transparent fw4 bn ph0 pv1 hv-fluid-rd bg-transparent pointer">RESOURCES</button>
+          <button class="outline-transparent fw4 ba b--white bw1 ph0 pv2 hv-fluid-rd bg-transparent pointer">Resources</button>
         </a>
       </li>
-      <li class="db-l dn fr mt-menu mr3 pr2 mv4-l mv3 pv1-l pv-4-m usecases-index">
+      <li class="db-l dn fr mr3 pr2 pv4 mv1 usecases-index">
         <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/services/continuous-hacking/">
-          <button class="outline-transparent fw4 bn ph0 pv2 hv-fluid-rd bg-transparent pointer">
-            SERVICES<div class="dib w1"><i class="fas fa-angle-down"></i></div>
+          <button class="outline-transparent fw4 ba b--white bw1 ph0 pv2 hv-fluid-rd bg-transparent pointer">
+            Services<div class="dib w1"><i class="fas fa-angle-down"></i></div>
           </button>
         </a>
         <div class="usecases-content roboto br3 br--bottom pt4 fadein">
@@ -257,11 +257,11 @@
           <a class="f-key-features fw4" href="{{ SITEURL }}/services/comparative/">Comparative</a>
         </div>
       </li>
-      <li class="db-l dn fr mt-menu mr3 pr2 mv4-l mv3 pv1-l pv-4-m products-index">
+      <li class="db-l dn fr mr3 pr2 pv4 mv1 products-index">
         <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/products/">
-          <button class="outline-transparent fw4 bn ph0 pv2 hv-fluid-rd bg-transparent pointer">
-            PRODUCTS<div class="dib w1"><i class="fas fa-angle-down"></i></div>
+          <button class="outline-transparent fw4 ba b--white bw1 ph0 pv2 hv-fluid-rd bg-transparent pointer">
+            Products<div class="dib w1"><i class="fas fa-angle-down"></i></div>
           </button>
         </a>
         <div class="products-content roboto br3 br--bottom pt4 fadein">
