refac(front): #3660 new navbar design
- Minor fixes in the navbar view


Former-commit-id: 16b71cbcd66e83bf20a29794f47599b76d04d56f

--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -14,7 +14,7 @@
 {% block header %}
 
 <div class="flex-ns flex-wrap-ns justify-between-m banner-bg bg-banner-sz coverm cover-s section-height minh-100vh">
-  <div class="ba1 mb3 relative dt-ns mt0-ns pr3-ns pl3-ns pt3 ma-auto pt6-l pt4 mw9 ml-auto mr-auto w-100">
+  <div class="ba1 mb3 relative dt-ns mt-body pr3-ns pl3-ns pt3 ma-auto pt6-l pt4 mw9 ml-auto mr-auto w-100">
     <!-- Banner Image-->
     <div class="fr-l w-45-l w100-m w90-s tc ml-auto mr-auto"
          data-aos="fade-right"
