integrates\refac(cross): #3032.44 remove subfolder
- Remove subfolder for new integrates


Former-commit-id: 570cf37230eb2afb632e86cc4195f7cf671a86cd

--- a/integrates/app/templates/app.html
+++ b/integrates/app/templates/app.html
@@ -5,7 +5,7 @@
   <head>
     <script>
       if (screen.width < 769) {
-        location = "/integrates/mobile";
+        location = "/mobile";
       }
     </script>
     {% if not debug %}
