--- a/integrates/app/templates/index.html
+++ b/integrates/app/templates/index.html
@@ -4,7 +4,7 @@
   <head>
     <script>
       if (screen.width < 769) {
-        location = "/integrates/mobile";
+        location = "/mobile";
       }
     </script>
     {% if not debug %}
