--- a/integrates/app/templates/HTTP401.html
+++ b/integrates/app/templates/HTTP401.html
@@ -38,7 +38,7 @@
     <script>
         function Redirect()
         {
-        window.location="https://fluidattacks.com/integrates";
+        window.location="https://integrates.fluidattacks.com";
         }
         setTimeout(Redirect, 10000);
     </script>
