refac(front): #3660.4 new navbar design
- Fixed some bugs with internal pages related to the fixed menu


Former-commit-id: 7e4992107f2566ec88980db600a8fac1727eb988

--- a/theme/2020/templates/about-us/cardsgen.html
+++ b/theme/2020/templates/about-us/cardsgen.html
@@ -26,7 +26,7 @@
 
 <!-- This block is for the breadcrumb -->
 {% block breadcrumb%}
-<div class="pv0">
+<div class="pv0 mt-body">
   <div class="df ma-auto bg-fluid-black">
     <div class="roboto f6-l f7 tl mw9 ml-auto mr-auto">
       <ul class="dib list w-auto mh3-l pl0-l pl3 ml1">
