--- a/theme/2020/templates/contact-us.html
+++ b/theme/2020/templates/contact-us.html
@@ -25,7 +25,7 @@
 {% endblock title %}
 
 {% block content %}
-<div class="mw9 flex flex-wrap ml-auto mr-auto pt4-l contact-page">
+<div class="mw9 flex flex-wrap ml-auto mr-auto pt4-l contact-page mt-body">
   <div class="w-50-l w-100">
     <div class="slideshow-container">
       <div class="slideshow-inner">
