--- a/theme/2020/templates/page.html
+++ b/theme/2020/templates/page.html
@@ -31,7 +31,7 @@
 {% endblock canonical %}
 
 {% block breadcrumb %}
-<div class="pv0">
+<div class="pv0 mt-body">
   <!-- navcontent-info -->
   <div class="df ma-auto bg-fluid-black">
     <div class="roboto f6-l f7 tl mw9 ml-auto mr-auto">
