--- a/theme/2020/templates/base.html
+++ b/theme/2020/templates/base.html
@@ -190,7 +190,7 @@
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-PCDDL8T');</script>
     <!-- End Google Tag Manager -->
   </head>
-  <body class="bg-white ma0 lh-copy">
+  <body class="bg-graylight ma0 lh-copy">
     {% assets filters="uglifyjs", output="static/js/plugins.min.js", "../node_modules/jquery/dist/jquery.js", "js/assets/tipuesearch/tipuesearch.min.js", "../node_modules/iframe-resizer/js/iframeResizer.js", "js/assets/tipuesearch/tipuesearch_set.js" %}
       <script type="text/javascript"
               src="{{ SITEURL }}/{{ ASSET_URL }}"></script>
@@ -203,7 +203,7 @@
       <div class="skeleton bg-graylight">
         {% include "menu.html" %}
       </div>
-      <div>
+      <div class="bg-graylight">
         {% block breadcrumb %}{% endblock breadcrumb%}
         {% block header %}
         {% endblock header %}
