--- a/theme/2020/templates/findings.html
+++ b/theme/2020/templates/findings.html
@@ -27,7 +27,7 @@
 
 {% block breadcrumb%}
   <!-- navcontent-container -->
-  <div class="pv0">
+  <div class="pv0 mt-body">
     <!-- navcontent-info -->
     <div class="df ma-auto bg-fluid-black">
       <div class="roboto f6-l f7 tl mw9 ml-auto mr-auto">
