integrates\refac(front): #121.1 add message
- add message when the analytics view is empty


Former-commit-id: 74028e92f9009e1f9b37e8ec1780d084c686079c

--- a/integrates/front/src/graphics/components/Graphic/index.css
+++ b/integrates/front/src/graphics/components/Graphic/index.css
@@ -4,6 +4,13 @@
   width: 100px;
 }
 
+:local .emptyChart {
+  color: black;
+  font-size: 16px;
+  text-align: center;
+  margin: 0px;
+}
+
 :local .frame {
   border-style: none;
   height: 100%;
@@ -17,6 +24,7 @@
   position: absolute;
   text-align: center;
   transform: translate(-50%);
+  line-height: 1;
 }
 
 :local .modalDialog {
